[tool.poetry]
name = "test-ui-project"
version = "0.1.0"
description = ""
authors = ["Maksim Ivanov <maksimivanov.06@yandex.ru>"]
readme = "README.md"
packages = [{include = "test_ui_project"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.3.3"
selenium = "^4.27.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
